# M4RL

./: README.md
1_MSABM/continuous_CSF1R_I_treatment_case/: CMakeLists.txt  run_multiple_simulations.sh
1_MSABM/no_treatment_case/: CMakeLists.txt  run_multiple_simulations.sh
1_MSABM/tumor_growth_case/: CMakeLists.txt  run_multiple_simulations.sh
2_surrogate_model/: surrogate_model_training.py  surrogate_model_verification.py
3_A3C_RL_with_surrogate_model/: A3C_RL_evaluation.py  A3C_RL_train.py  A3C_RL_training.py
4_testing_treatments_with_ST_based_TME/: CMakeLists.txt  run_multiple_simulations.sh
4_testing_treatments_with_ST_based_TME/inc/: cellgrids.h  diffusibles.h  environment.h  macrophage.h  tumor.h
4_testing_treatments_with_ST_based_TME/src/: cellgrids.cpp  deadcell.cpp  diffusibles.cpp  environment.cpp  macrophage.cpp  main.cpp  tumor.cpp
4_testing_treatments_with_ST_based_TME/stGBM_data/UKF_241_C/: After_interpolation_cellgrid_100.csv  GBMspatial.csv  Interpolation_CSF1_100.csv  Interpolation_EGF_100.csv  Interpolation_IGF1_100.csv
4_testing_treatments_with_ST_based_TME/stGBM_data/UKF_262/: After_interpolation_cellgrid_100.csv  GBMspatial.csv  Interpolation_CSF1_100.csv  Interpolation_EGF_100.csv  Interpolation_IGF1_100.csv
4_testing_treatments_with_ST_based_TME/stGBM_data/UKF_270/: After_interpolation_cellgrid_100.csv  GBMspatial.csv  Interpolation_CSF1_100.csv  Interpolation_EGF_100.csv  Interpolation_IGF1_100.csv
5_stMLnet_analysis_with_ST_based_data(UKF_262)/: s0_seurat_obj_dataset.R  s1_runMLnet.R  s2_visiual_CCC_only_network.R
(+172 files in other folders)
